Import results into the repository

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -40,6 +40,14 @@ jobs:
       event: ${{ github.event_name }}
       run_id: ${{ github.run_id }}
 
+  import-results:
+    if: ${{ endsWith(github.repository, 'winetest') }}
+    needs: [tests-linux, tests-macos]
+    uses: ./.github/workflows/import-results.yml
+    secrets: inherit
+    with:
+      run_id: ${{ github.run_id }}
+
   clean:
     needs: [tests-linux, tests-macos, tests-windows]
     runs-on: ubuntu-latest
